# infuse

./: Cargo.toml  README.md
crates/infuse/: Cargo.toml
crates/infuse-macros/: Cargo.toml
crates/infuse-macros-watt/: Cargo.toml
crates/infuse-macros/src/: controller.rs  dependencies.rs  lib.rs  service.rs
crates/infuse/examples/: main.rs
crates/infuse/src/: dependencies.rs  lib.rs  service.rs
