[package]
name = "infuse-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
darling = { version = "0.14.1", features = [] }
validator="0.15.0"
url="2.2.2"
proc-macro2="*"

[lib]
proc-macro = true
